--- a/UE1/login.html
+++ b/UE1/login.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link rel="stylesheet" href="styles/login.css">
+    <link rel="stylesheet" href="styles/style.css">
     <script>
     </script>
 </head>
 <body>
     <header>
         <img class="logo" src="images/big-logo-small.png" alt="BIG Smart Home Logo"/>
-        BIG Smart Home
+        <h1>BIG Smart Home</h1>
     </header>
     <main>
         <form class="form" method="post" action="#">
             <h2 id="header-login">Anmelden</h2>
-            <div>
+            <div class="formfield">
                 <label for="username">Benutzername</label>
                 <input id="username" name="Username" type="text" required>
             </div>
-            <div>
+            <div class="formfield">
                 <label for="password">Passwort</label>
                 <input id="password" name="Password" type="password" required>
             </div>
-            <div>
+            <div class="formsubmit formfield">
                 <button class="submit">
                     Anmelden
                 </button>
