options.html and login.html done navigation also in place with the required needs
TODO: Minor fixes in layout

--- a/UE1/options.html
+++ b/UE1/options.html
@@ -6,10 +6,44 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+
 <header>
     <img class="logo" src="images/big-logo-small.png" alt="BIG Smart Home Logo"/>
-    <h1>BIG Smart Home</h1>
+    <h1 class="logoheadline">BIG Smart Home</h1>
+    <span class="navigation-menu hidesmall">Abmelden</span>
+    <span class="navigation-menu-small hidebig">
+        <->
+        <div class="dropdown-content">
+            <a href="options.html">Option</a>
+            <a href="login.html">Abmelden</a>
+        </div>
+    </span>
 </header>
 
+<main>
+    <form class="form" method="post" action="#">
+        <h2 id="header-login">Passwort &auml;ndern</h2>
+        <div class="formfield">
+            <label for="oldPassword">Altes Passwort</label>
+            <input id="oldPassword" name="OldPassword" type="password" placeholder="Altes Passwort" required>
+        </div>
+        <div class="formfield">
+            <label for="newPassword">Neues Passwort</label>
+            <input id="newPassword" name="NewPassword" type="password" placeholder="Neues Passwort" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,12}" required>
+        </div>
+        <div class="formfield">
+            <label for="newPasswordRep">Passwort wiederholen</label>
+            <input id="newPasswordRep" name="NewPasswordRep" type="password" placeholder="Neues Passwort wiederholen" required>
+        </div>
+        <div class="formsubmit formfield">
+            <button class="submit">
+                &Auml;nderung speichern
+            </button>
+        </div>
+    </form>
+</main>
+<footer>
+    <p id="Copyright"> &copy; 2017 BIG Smart Home
+</footer>
 </body>
 </html>
