style.css media < 400 should be fine

--- a/UE1/login.html
+++ b/UE1/login.html
@@ -32,11 +32,7 @@
         </form>
     </main>
     <footer>
-        <p id="Copyright"> &copy; 2017 BIG Smart Home
+        <p class="copyright">&copy; 2017 BIG Smart Home</p>
     </footer>
 </body>
 </html>
-
-
-
-<!--  -->
