--- a/UE1/overview.html
+++ b/UE1/overview.html
@@ -20,8 +20,121 @@
         </div>
     </span>
 </header>
+<h2>Geräte</h2>
 <main>
 
+    <div class="sidebar">
+        <h2>Serverstatus:</h2>
+        <ul>
+            <li>
+                <span class="labelSidebar">Benutzer </span><span class="sidebarRight">Administrator</span>
+            </li>
+            <li>
+                <span class="labelSidebar">Systemstartzeit </span><span class="sidebarRight">Administrator</span>
+            </li>
+            <li>
+                <span class="labelSidebar">Systemstartdatum </span><span class="sidebarRight">Administrator</span>
+            </li>
+            <li>
+                <span class="labelSidebar">Fehlgeschlagene Logins </span><span class="sidebarRight">Administrator</span>
+            </li>
+        </ul>
+
+
+    </div>
+
+
+
+    <div class="content" >
+
+
+        <div class="boxed">
+            <div class="boxedLeft">
+                <img src="images/thermometer_warm.svg" alt="Thermometer warm" class="boxedPicture" >
+            </div>
+            <div class="boxedRight">
+                <ul>
+                    <li>
+                        <h3>Heizk&ouml;rper Esszimmer</h3>
+
+                    </li>
+                    <li>
+                        <span class="boxedName">Heizk&ouml;rperthermostat</span>
+                    </li>
+                    <li>
+                        eQ-3 Smart
+
+                    </li>
+                </ul>
+                <p class="boxedFooter">
+                    <img src="images/edit.png" alt="Edit">
+                    <img src="images/remove.png" alt="Remove">
+                </p>
+            </div>
+        </div>
+        <div class="boxed">
+            <div class="boxedLeft">
+                <img src="images/thermometer_cold.svg" alt="Thermometer cold" class="boxedPicture">
+            </div>
+            <div class="boxedRight">
+                <ul>
+                    <li>
+                        <h3>Heizk&ouml;rper Badezimmer</h3>
+
+                    </li>
+                    <li>
+                        <span class="boxedName">Heizk&ouml;rperthermostat</span>
+                    </li>
+                    <li>
+                        eQ-3 Smart
+
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="boxed">
+            <div class="boxedLeft">
+                <img src="images/bulb_off.svg" alt="Bulb off" class="boxedPicture">
+            </div>
+            <div class="boxedRight">
+                <ul>
+                    <li>
+                        <h3>Beleuchtung Außen</h3>
+
+                    </li>
+                    <li>
+                        <span class="boxedName">Gl&uuml;hbirne</span>
+                    </li>
+                    <li>
+                        Osram Lightify
+
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="boxed">
+            <div class="boxedLeft">
+                <img src="images/bulb_on.svg" alt="Bulb on" class="boxedPicture">
+            </div>
+            <div class="boxedRight">
+                <ul>
+                    <li>
+                        <h3>Beleuchtung K&uuml;che</h3>
+
+                    </li>
+                    <li>
+                        <span class="boxedName">Gl&uuml;hbirne</span>
+                    </li>
+                    <li>
+                        Playbulb Smart
+
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+<!--
     <div class="sidebar">
         <h2 id="header-login">Serverstatus:</h2>
         <div class="formfield">
@@ -53,8 +166,6 @@
 
 
     </div>
-
-    <!-- Geräte-->
     <div class="content">
         <h2 id="header-login">Geräte</h2>
         <div class="boxed">
@@ -107,6 +218,7 @@
             </form>
         </div>
     </div>
+    -->
 </main>
 <footer>
     <p id="Copyright"> &copy; 2017 BIG Smart Home
