in mozzila firefox sieht sehr gut aus, aber in google chome ist ganz anders TODO: small fixes

--- a/UE1/options.html
+++ b/UE1/options.html
@@ -10,7 +10,7 @@
 <header>
     <img class="logo" src="images/big-logo-small.png" alt="BIG Smart Home Logo"/>
     <h1 class="logoheadline">BIG Smart Home</h1>
-    <span class="navigation-menu hidesmall">Abmelden</span>
+    <span class="navigation-menu hidesmall"><a href="login.html" class="styleButton">Abmelden</a></span>
     <span class="navigation-menu-small hidebig">
         ☰
         <div class="dropdown-content">
