--- a/UE1/overview.html
+++ b/UE1/overview.html
@@ -9,9 +9,9 @@
 <header>
     <img class="logo" src="images/big-logo-small.png" alt="BIG Smart Home Logo"/>
     <h1 class="logoheadline">BIG Smart Home</h1>
-    <span class="navigation-menu hidesmall"><a href="options.html">Optionen</a></span>
+    <span class="navigation-menu hidesmall"><a href="options.html" class="styleButton">Optionen</a></span>
     <span class="divider"></span>
-    <span class="navigation-menu hidesmall"><a href="login.html">Abmelden</a></span>
+    <span class="navigation-menu hidesmall"><a href="login.html" class="styleButton">Abmelden</a></span>
     <span class="navigation-menu-small hidebig">
         ☰
         <div class="dropdown-content">
@@ -20,7 +20,7 @@
         </div>
     </span>
 </header>
-<h2>Geräte</h2>
+
 <main>
 
     <div class="sidebar">
@@ -30,24 +30,24 @@
                 <span class="labelSidebar">Benutzer </span><span class="sidebarRight">Administrator</span>
             </li>
             <li>
-                <span class="labelSidebar">Systemstartzeit </span><span class="sidebarRight">Administrator</span>
+                <span class="labelSidebar">Systemstartzeit </span><span class="sidebarRight">10:00</span>
             </li>
             <li>
-                <span class="labelSidebar">Systemstartdatum </span><span class="sidebarRight">Administrator</span>
+                <span class="labelSidebar">Systemstartdatum </span><span class="sidebarRight">06.03.2017</span>
             </li>
             <li>
-                <span class="labelSidebar">Fehlgeschlagene Logins </span><span class="sidebarRight">Administrator</span>
+                <span class="labelSidebar">Fehlgeschlagene Logins </span><span class="sidebarRight">3</span>
             </li>
         </ul>
 
 
     </div>
 
-
-
     <div class="content" >
 
-
+      <div class="boxTitle">
+          <h2>Geräte</h2>
+      </div>
         <div class="boxed">
             <div class="boxedLeft">
                 <img src="images/thermometer_warm.svg" alt="Thermometer warm" class="boxedPicture" >
@@ -90,6 +90,10 @@
 
                     </li>
                 </ul>
+                <p class="boxedFooter">
+                    <img src="images/edit.png" alt="Edit">
+                    <img src="images/remove.png" alt="Remove">
+                </p>
             </div>
         </div>
         <div class="boxed">
@@ -110,6 +114,10 @@
 
                     </li>
                 </ul>
+                <p class="boxedFooter">
+                    <img src="images/edit.png" alt="Edit">
+                    <img src="images/remove.png" alt="Remove">
+                </p>
             </div>
         </div>
 
@@ -131,94 +139,110 @@
 
                     </li>
                 </ul>
+                <p class="boxedFooter">
+                    <img src="images/edit.png" alt="Edit">
+                    <img src="images/remove.png" alt="Remove">
+                </p>
+            </div>
+        </div>
+        <div class="boxed">
+            <div class="boxedLeft">
+                <img src="images/webcam_on.svg" alt="Webcam on" class="boxedPicture">
+            </div>
+            <div class="boxedRight">
+                <ul>
+                    <li>
+                        <h3>Kamera Vordert&uuml;r</h3>
+
+                    </li>
+                    <li>
+                        <span class="boxedName">&Uuml;berwachungskamera</span>
+                    </li>
+                    <li>
+                        ABUS Funk-Außenkamera TVAC16010A
+
+                    </li>
+                </ul>
+                <p class="boxedFooter">
+                    <img src="images/edit.png" alt="Edit">
+                    <img src="images/remove.png" alt="Remove">
+                </p>
+            </div>
+        </div>
+        <div class="boxed">
+            <div class="boxedLeft">
+                <img src="images/webcam_off.svg" alt="Webcam off" class="boxedPicture">
+            </div>
+            <div class="boxedRight">
+                <ul>
+                    <li>
+                        <h3>Kamera Wohnzimmer</h3>
+
+                    </li>
+                    <li>
+                        <span class="boxedName">Webcam</span>
+                    </li>
+                    <li>
+                        HiKam S5
+
+                    </li>
+                </ul>
+                <p class="boxedFooter">
+                    <img src="images/edit.png" alt="Edit">
+                    <img src="images/remove.png" alt="Remove">
+                </p>
+            </div>
+        </div>
+        <div class="boxed">
+            <div class="boxedLeft">
+                <img src="images/roller_shutter_closed.svg" alt="Roller Shutter closed" class="boxedPicture">
+            </div>
+            <div class="boxedRight">
+                <ul>
+                    <li>
+                        <h3>Rolladen Wohnzimmer</h3>
+
+                    </li>
+                    <li>
+                        <span class="boxedName">Rolladen</span>
+                    </li>
+                    <li>
+                        Somfy RS100 io
+
+                    </li>
+                </ul>
+                <p class="boxedFooter">
+                    <img src="images/edit.png" alt="Edit">
+                    <img src="images/remove.png" alt="Remove">
+                </p>
+            </div>
+        </div>
+        <div class="boxed">
+            <div class="boxedLeft">
+                <img src="images/roller_shutter_halfopen.svg" alt="Roller Shutter halfopen" class="boxedPicture">
+            </div>
+            <div class="boxedRight">
+                <ul>
+                    <li>
+                        <h3>Rolladen Wohnzimmer</h3>
+
+                    </li>
+                    <li>
+                        <span class="boxedName">Rolladen</span>
+                    </li>
+                    <li>
+                        Somfy RS100 io
+
+                    </li>
+                </ul>
+                <p class="boxedFooter">
+                    <img src="images/edit.png" alt="Edit">
+                    <img src="images/remove.png" alt="Remove">
+                </p>
             </div>
         </div>
     </div>
-<!--
-    <div class="sidebar">
-        <h2 id="header-login">Serverstatus:</h2>
-        <div class="formfield">
-            <label for="username"><b>Benutzer</b></label>
-            <div class="input-group">
-                <label for="username">Administrator</label>
-            </div>
 
-        </div>
-        <div class="formfield">
-            <label for="time"><b>Systemstartzeit</b></label>
-            <div class="input-group">
-                <label for="time">10:00</label></div>
-
-        </div>
-        <div class="formfield">
-            <label for="datetime"><b>Systemstartdatum</b></label>
-            <div class="input-group">
-                <label for="datetime">06.03.2017 </label></div>
-
-        </div>
-        <div class="formfield">
-            <label for="error"><b>Fehlgeschlagene Logins</b></label>
-            <div class="input-group">
-                <label for="error">3</label></div>
-
-        </div>
-
-
-
-    </div>
-    <div class="content">
-        <h2 id="header-login">Geräte</h2>
-        <div class="boxed">
-
-
-            <img class="logo" src="images/thermometer_warm.svg" width=100/>
-
-
-        </div>
-
-        <div class="boxed">
-
-            <img class="logo" src="images/thermometer_cold.svg" width=100/>
-
-        </div>
-
-        <div class="formfield">
-            <form class="form" method="post" action="#">
-                <img class="logo" src="images/bulb_off.svg" height=100/>
-            </form>
-        </div>
-
-        <div class="boxed">
-            <form class="form" method="post" action="#">
-                <img class="logo" src="images/bulb_on.svg" width=100 height=100/>
-            </form>
-        </div>
-
-        <div>
-            <form class="form" method="post" action="#">
-                <img class="logo" src="images/webcam_on.svg" width=100 height=100/>
-            </form>
-        </div>
-
-        <div>
-            <form class="form" method="post" action="#">
-                <img class="logo" src="images/webcam_off.svg" width=100 height=100/>
-            </form>
-        </div>
-
-        <div>
-            <form class="form" method="post" action="#">
-                <img class="logo" src="images/roller_shutter_closed.svg" width=100 height=100/>
-            </form>
-        </div>
-
-        <div>
-            <form class="form" method="post" action="#">
-                <img class="logo" src="images/roller_shutter_halfopen.svg" width=100 height=100/>
-            </form>
-        </div>
-    </div>
-    -->
 </main>
 <footer>
     <p id="Copyright"> &copy; 2017 BIG Smart Home
