--- a/UE1/options.html
+++ b/UE1/options.html
@@ -10,8 +10,8 @@
 <header>
     <img class="logo" src="images/big-logo-small.png" alt="BIG Smart Home Logo"/>
     <h1 class="logoheadline">BIG Smart Home</h1>
-    <span class="navigation-menu hidesmall">Abmelden</span>
-    <span class="navigation-menu-small hidebig">
+    <span class="navigation-menu hidesmall"><a href="login.html">Abmelden</a></span>
+    <span class="navigation-menu hidebig">
         ☰
         <div class="dropdown-content">
             <a href="login.html">Abmelden</a>
