login + options + overview 99%
TODO: Footer ganz nach unten

--- a/UE1/overview.html
+++ b/UE1/overview.html
@@ -38,7 +38,7 @@
         </ul>
     </div>
     <div class="wrapper">
-        <h2 class="deviceHeadline">Geräte</h2>
+        <h2 class="deviceHeadline">Ger&auml;te</h2>
         <div class="content">
             <div class="boxed">
                 <div class="devicePicture"><img src="images/thermometer_warm.svg" alt="Thermometer warm"
