span -> div in dropdown to avoid errors

--- a/UE1/overview.html
+++ b/UE1/overview.html
@@ -11,13 +11,13 @@
     <h1 class="logoheadline">BIG Smart Home</h1>
     <span class="navigation-menu hidesmall"><a href="options.html">Optionen</a></span>
     <span class="navigation-menu hidesmall"><a href="login.html">Abmelden</a></span>
-    <span class="navigation-menu hidebig">
+    <div class="navigation-menu hidebig">
         ☰
         <div class="dropdown-content">
             <a href="options.html">Optionen </a>
             <a href="login.html"> Abmelden</a>
         </div>
-    </span>
+    </div>
 </header>
 <main>
     <div class="sidebar">
