--- a/UE1/options.html
+++ b/UE1/options.html
@@ -11,12 +11,12 @@
     <img class="logo" src="images/big-logo-small.png" alt="BIG Smart Home Logo"/>
     <h1 class="logoheadline">BIG Smart Home</h1>
     <span class="navigation-menu hidesmall"><a href="login.html">Abmelden</a></span>
-    <span class="navigation-menu hidebig">
+    <div class="navigation-menu hidebig">
         ☰
         <div class="dropdown-content">
             <a href="login.html">Abmelden</a>
         </div>
-    </span>
+    </div>
 </header>
 
 <main>
